--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/all.min.css">
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
@@ -23,7 +24,28 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+    <header class="site-header">
+        <div class="hero">
+          <div class="contenido-header">
+            <nav class="redes-sociales">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+            </nav>
+            <div class="informacion-evento">
+              <div class="clearfix">
+                <p class="fecha"><i class="far fa-calendar-alt"></i> 10-12 Mayo 2020</p>
+                <p class="ciudad"><i class="fas fa-map-marker-alt"></i> Guadalajara,MX</p>
+                <h1 class="nombre-sitio">GdlWebCamp</h1>
+                <p class="slogan"><span>La mejor conferencia</span> de diseño web</p>
+              </div>
+            </div><!--Informacion evento-->
+          </div>
+        </div><!--hero-->
+    </header>
+
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
