--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/all.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald|PT+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
@@ -39,13 +40,169 @@
                 <p class="fecha"><i class="far fa-calendar-alt"></i> 10-12 Mayo 2020</p>
                 <p class="ciudad"><i class="fas fa-map-marker-alt"></i> Guadalajara,MX</p>
                 <h1 class="nombre-sitio">GdlWebCamp</h1>
-                <p class="slogan"><span>La mejor conferencia</span> de diseño web</p>
+                <p class="slogan">La mejor conferencia de <span>diseño web</span> </p>
               </div>
             </div><!--Informacion evento-->
           </div>
         </div><!--hero-->
     </header>
-
+    <div class="barra">
+      <div class="contenedor clearfix">
+        <div class="logo">
+          <img src="img/logo.svg" alt="Logo">
+        </div>
+        <div class="menu-movil">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <nav class="navegacion-principal clearfix">
+          <a href="#">Conferencia</a>
+          <a href="#">Calendario</a>
+          <a href="#">Invitados</a>
+          <a href="#">Reservaciones</a>
+        </nav>
+      </div><!--contenedor-->
+    </div><!--Barra-->
+    <section class="seccion contenedor">
+      <h2>La mejor conferencia de diseño web en español</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus minus laboriosam animi corporis amet adipisci, a aliquid harum 
+        aspernatur exercitationem, et placeat voluptatibus nisi velit quod odio impedit quis? Recusandae.
+      </p>
+    </section><!--fin seccion-->
+    <section class="programa">
+      <div class="contenedor-video">
+          <video autoplay loop poster="img/bg-talleres.jpg">
+            <source src="video/video.mp4" type="video/mp4">
+            <source src="video/video.ogv" type="video/ogv">
+            <source src="video/video.webm" type="video/webm">  
+          </video>
+      </div><!--contendor video-->
+      <div class="contenido-programa">
+        <div class="contenedor">
+          <div class="programa-evento">
+            <h2>Programa del evento</h2>
+            <nav class="menu-programa">
+              <a href="talleres"><i class="fas fa-code"></i>Talleres</a>
+              <a href="conferencias"><i class="fas fa-comment"></i>Conferencias</a>
+              <a href="seminarios"><i class="fas fa-university"></i>Seminarios</a>
+            </nav>
+            <div id="talleres" class="info-curso ocultar clearfix">
+              <div class="detalle-evento">
+                <h3>HTML5, CSS y JavaScript</h3>
+                <p><i class="fas fa-clock"></i>16:00 hrs</p>
+                <p><i class="fas fa-calendar"></i>10 de Mayo</p>
+                <p><i class="fas fa-user"></i>Edgar Ortega</p>
+              </div><!--detalle curso-->
+              <div class="detalle-evento">
+                <h3>Responsive web design</h3>
+                <p><i class="fas fa-clock"></i>20:00 hrs</p>
+                <p><i class="fas fa-calendar"></i>10 de Mayo</p>
+                <p><i class="fas fa-user"></i>Edgar Ortega</p>
+              </div><!--detalle curso-->
+              <a href="#" class="button float-right">Ver todos</a>
+            </div><!--Talleres-->
+          </div><!--Programa evento-->
+        </div><!--Contenedor-->
+      </div><!--Contenido programa-->
+    </section><!--Programa-->
+    <!--*************************************************************************************/-->
+    <section class="invitados contenedor seccion">
+      <h2>Nuestros invitados</h2>
+      <ul class="lista-invitados clearfix">
+        <li>
+          <div class="invitado">
+            <img src="img/invitado1.jpg" alt="Invitado">
+            <p>Rafael Bautista</p>
+          </div>
+        </li>
+        <li>
+          <div class="invitado">
+            <img src="img/invitado2.jpg" alt="Invitado">
+            <p>Shari Herrera</p>
+          </div>
+        </li>
+        <li>
+          <div class="invitado">
+            <img src="img/invitado3.jpg" alt="Invitado">
+            <p>George Sanchez</p>
+          </div>
+        </li>
+        <li>
+          <div class="invitado">
+            <img src="img/invitado4.jpg" alt="Invitado">
+            <p>Susana Rivera</p>
+          </div>
+        </li>
+        <li>
+          <div class="invitado">
+            <img src="img/invitado5.jpg" alt="Invitado">
+            <p>Harlod Garcia</p>
+          </div>
+        </li>
+        <li>
+          <div class="invitado">
+            <img src="img/invitado6.jpg" alt="Invitado">
+            <p>Susan Sanchez</p>
+          </div>
+        </li>
+      </ul>
+    </section><!--invitados-->
+    <div class="contador parallax">
+      <div class="contenedor">
+        <ul class="resumen-evento">
+          <li><p class="numero">6</p>Invitados</li>
+          <li><p class="numero">15</p>Talleres</li>
+          <li><p class="numero">3</p>Dias</li>
+          <li><p class="numero">9</p>Conferencias</li>
+        </ul>
+      </div>
+    </div><!--parallax-->
+    <section class="seccion precios">
+      <h2>Precios</h2>
+      <div class="contenedor">
+        <ul class="lista-precios clearfix">
+          <li>
+            <div class="tabla-precios">
+              <h3>Precio por dia</h3>
+              <p class="numero">$30.00</p>
+              <ul>
+                <li><i class="fas fa-check"></i>Bocadillos Gratis</li>
+                <li><i class="fas fa-check"></i>Todas las conferencias</li>
+                <li><i class="fas fa-check"></i>Todos los talleres</li>
+              </ul>
+              <a href="#" class="button hollow">Comprar</a>
+            </div>
+          </li>
+          <li>
+            <div class="tabla-precios">
+              <h3>Todos los dias</h3>
+              <p class="numero">$50.00</p>
+              <ul>
+                <li><i class="fas fa-check"></i>Bocadillos Gratis</li>
+                <li><i class="fas fa-check"></i>Todas las conferencias</li>
+                <li><i class="fas fa-check"></i>Todos los talleres</li>
+              </ul>
+              <a href="#" class="button">Comprar</a>
+            </div>
+          </li>
+          <li>
+            <div class="tabla-precios">
+              <h3>Pase por dos dias</h3>
+              <p class="numero">$45.00</p>
+              <ul>
+                <li><i class="fas fa-check"></i>Bocadillos Gratis</li>
+                <li><i class="fas fa-check"></i>Todas las conferencias</li>
+                <li><i class="fas fa-check"></i>Todos los talleres</li>
+              </ul>
+              <a href="#" class="button hollow">Comprar</a>
+            </div>
+          </li>
+        </ul>
+      </div><!--contenedor-->
+    </section><!--Precios-->
+    <div class="mapa"></div>
+    
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
