--- a/index.html
+++ b/index.html
@@ -202,7 +202,89 @@
       </div><!--contenedor-->
     </section><!--Precios-->
     <div class="mapa"></div>
+    <section class="seccion">
+      <h2>Testimoniales</h2>
+      <div class="testimoniales contenedor clearfix">
+        <div class="testimonial">
+          <blockquote class="clearfix">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos, eum quae similique itaque porro 
+              architecto corrupti possimus voluptatem cumque earum.</p>
+            <footer class="info-testimonial">
+              <img src="img/testimonial.jpg" alt="Testimonial">
+              <cite>Oswaldo Aponte Escobedo <span>Diseñador en @prisma</span></cite>
+            </footer>  
+          </blockquote>
+        </div><!--Testimonial-->
+        <div class="testimonial">
+          <blockquote class="clearfix">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos, eum quae similique itaque porro 
+              architecto corrupti possimus voluptatem cumque earum.</p>
+            <footer class="info-testimonial">
+              <img src="img/testimonial.jpg" alt="Testimonial">
+              <cite>Oswaldo Aponte Escobedo <span>Diseñador en @prisma</span></cite>
+            </footer>  
+          </blockquote>
+        </div><!--Testimonial-->
+        <div class="testimonial">
+          <blockquote class="clearfix">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos, eum quae similique itaque porro 
+              architecto corrupti possimus voluptatem cumque earum.</p>
+            <footer class="info-testimonial">
+              <img src="img/testimonial.jpg" alt="Testimonial">
+              <cite>Oswaldo Aponte Escobedo <span>Diseñador en @prisma</span></cite>
+            </footer>  
+          </blockquote>
+        </div><!--Testimonial-->
+      </div><!--Testimoniales-->
+    </section>
+    <div class="newsletter parallax">
+      <div class="contenido contenedor">
+        <p>Registrate al newsletter</p>
+        <h3>GdlWebCamp</h3>
+        <a href="#" class="button transparente">Registro</a>
+      </div>
+    </div><!--Newsletter-->
+    <section class="seccion">
+      <h2>faltan</h2>
+      <div class="cuenta-regresiva contenedor">
+        <ul class="clearfix">
+          <li><p class="numero">80</p>dias</li>
+          <li><p class="numero">15</p>Hora</li>
+          <li><p class="numero">5</p>Minutos</li>
+          <li><p class="numero">30</p>Segundos</li>
+        </ul>
+      </div><!--cuenta regresiva-->
+    </section><!--Seccion cuenta regresiva-->
     
+    <footer class="site-foter">
+      <div class="contenedor clearfix">
+        <div class="footer-informacion">
+            <h3>Sobre <span>GdlWebCamp</span></h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime expedita eveniet at obcaecati dignissimos
+               Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur ducimus magni ex consectetur quasi,
+               cumque commodi eum rerum nostrum debitis suscipit alias aut, temporibus vel a harum tenetur ipsum quidem.</p>
+        </div>
+        <div class="ultimos-tweets">
+          <h3>Ultimos <span>Tweets</span></h3>
+          <ul>
+            <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet eligendi, adipisci ab eos accusantium at</li>
+            <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet eligendi, adipisci ab eos accusantium at</li>
+            <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet eligendi, adipisci ab eos accusantium at,</li>
+          </ul>
+        </div>
+        <div class="menu">
+          <h3>Redes <span>Sociales</span></h3>
+          <nav class="redes-sociales">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-pinterest-p"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+        </nav>
+        </div>
+      </div>
+      <p class="copyright">Todos los derechos reservados GdlWebCamp 2020 &copy;</p>
+    </footer>
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
