--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <a href="#"><i class="fab fa-pinterest-p"></i></a>
             <a href="#"><i class="fab fa-youtube"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
-        </nav>
+        </nav><!--fin navegacion footer-->
         </div>
       </div>
       <p class="copyright">Todos los derechos reservados GdlWebCamp 2020 &copy;</p>
