--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div><!--Informacion evento-->
           </div>
         </div><!--hero-->
-    </header>
+    </header><!--fin header-->
     <div class="barra">
       <div class="contenedor clearfix">
         <div class="logo">
@@ -60,13 +60,13 @@
           <a href="#">Conferencia</a>
           <a href="#">Calendario</a>
           <a href="#">Invitados</a>
-          <a href="#">Reservaciones</a>
+          <a href="registro.html">Reservaciones</a>
         </nav>
       </div><!--contenedor-->
     </div><!--Barra-->
     <section class="seccion contenedor">
       <h2>La mejor conferencia de diseño web en español</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus minus laboriosam animi corporis amet adipisci, a aliquid harum 
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus minus laboriosam animi corporis amet adipisci, a aliquid harum
         aspernatur exercitationem, et placeat voluptatibus nisi velit quod odio impedit quis? Recusandae.
       </p>
     </section><!--fin seccion-->
@@ -75,7 +75,7 @@
           <video autoplay loop poster="img/bg-talleres.jpg">
             <source src="video/video.mp4" type="video/mp4">
             <source src="video/video.ogv" type="video/ogv">
-            <source src="video/video.webm" type="video/webm">  
+            <source src="video/video.webm" type="video/webm">
           </video>
       </div><!--contendor video-->
       <div class="contenido-programa">
@@ -207,32 +207,32 @@
       <div class="testimoniales contenedor clearfix">
         <div class="testimonial">
           <blockquote class="clearfix">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos, eum quae similique itaque porro 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos, eum quae similique itaque porro
               architecto corrupti possimus voluptatem cumque earum.</p>
             <footer class="info-testimonial">
               <img src="img/testimonial.jpg" alt="Testimonial">
               <cite>Oswaldo Aponte Escobedo <span>Diseñador en @prisma</span></cite>
-            </footer>  
+            </footer>
           </blockquote>
         </div><!--Testimonial-->
         <div class="testimonial">
           <blockquote class="clearfix">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos, eum quae similique itaque porro 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos, eum quae similique itaque porro
               architecto corrupti possimus voluptatem cumque earum.</p>
             <footer class="info-testimonial">
               <img src="img/testimonial.jpg" alt="Testimonial">
               <cite>Oswaldo Aponte Escobedo <span>Diseñador en @prisma</span></cite>
-            </footer>  
+            </footer>
           </blockquote>
         </div><!--Testimonial-->
         <div class="testimonial">
           <blockquote class="clearfix">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos, eum quae similique itaque porro 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dignissimos, eum quae similique itaque porro
               architecto corrupti possimus voluptatem cumque earum.</p>
             <footer class="info-testimonial">
               <img src="img/testimonial.jpg" alt="Testimonial">
               <cite>Oswaldo Aponte Escobedo <span>Diseñador en @prisma</span></cite>
-            </footer>  
+            </footer>
           </blockquote>
         </div><!--Testimonial-->
       </div><!--Testimoniales-->
@@ -255,7 +255,7 @@
         </ul>
       </div><!--cuenta regresiva-->
     </section><!--Seccion cuenta regresiva-->
-    
+
     <footer class="site-foter">
       <div class="contenedor clearfix">
         <div class="footer-informacion">
