--- a/registro.html
+++ b/registro.html
@@ -75,7 +75,7 @@
         </div>
         <div class="campo">
           <label for="e-mail">E-mail</label>
-          <input type="text" id="e-mail" placeholder="Tu e-mail" name="e-mail">
+          <input type="text" id="email" placeholder="Tu e-mail" name="e-mail">
         </div>
         <div class="erro"></div>
       </div><!--datos usuario-->
