--- a/registro.html
+++ b/registro.html
@@ -77,7 +77,7 @@
           <label for="e-mail">E-mail</label>
           <input type="text" id="email" placeholder="Tu e-mail" name="e-mail">
         </div>
-        <div class="erro"></div>
+        <div id="error"></div>
       </div><!--datos usuario-->
       <div class="paquetes" id="paquetes">
         <h3>Elige el numero de boletos</h3>
