--- a/index.html
+++ b/index.html
@@ -78,15 +78,17 @@
             <source src="video/video.webm" type="video/webm">
           </video>
       </div><!--contendor video-->
+
       <div class="contenido-programa">
         <div class="contenedor">
           <div class="programa-evento">
             <h2>Programa del evento</h2>
             <nav class="menu-programa">
-              <a href="talleres"><i class="fas fa-code"></i>Talleres</a>
-              <a href="conferencias"><i class="fas fa-comment"></i>Conferencias</a>
-              <a href="seminarios"><i class="fas fa-university"></i>Seminarios</a>
+              <a href="#talleres"><i class="fas fa-code"></i>Talleres</a>
+              <a href="#conferencias"><i class="fas fa-comment"></i>Conferencias</a>
+              <a href="#seminarios"><i class="fas fa-university"></i>Seminarios</a>
             </nav>
+
             <div id="talleres" class="info-curso ocultar clearfix">
               <div class="detalle-evento">
                 <h3>HTML5, CSS y JavaScript</h3>
@@ -102,6 +104,39 @@
               </div><!--detalle curso-->
               <a href="#" class="button float-right">Ver todos</a>
             </div><!--Talleres-->
+
+            <div id="conferencias" class="info-curso ocultar clearfix">
+              <div class="detalle-evento">
+                <h3>Como ser freelancer</h3>
+                <p><i class="fas fa-clock"></i>10:00 hrs</p>
+                <p><i class="fas fa-calendar"></i>10 de Mayo</p>
+                <p><i class="fas fa-user"></i>Gregorio Sanchez</p>
+              </div><!--detalle curso-->
+              <div class="detalle-evento">
+                <h3>Tecnologias del futuro</h3>
+                <p><i class="fas fa-clock"></i>17:00 hrs</p>
+                <p><i class="fas fa-calendar"></i>10 de Mayo</p>
+                <p><i class="fas fa-user"></i>Susana Sanchez</p>
+              </div><!--detalle curso-->
+              <a href="#" class="button float-right">Ver todos</a>
+            </div><!--Conferencias-->
+
+            <div id="seminarios" class="info-curso ocultar clearfix">
+              <div class="detalle-evento">
+                <h3>Diseño UI/UX para moviles</h3>
+                <p><i class="fas fa-clock"></i>17:00 hrs</p>
+                <p><i class="fas fa-calendar"></i>11 de Mayo</p>
+                <p><i class="fas fa-user"></i>Harold Garcia</p>
+              </div><!--detalle curso-->
+              <div class="detalle-evento">
+                <h3>Responsive web design</h3>
+                <p><i class="fas fa-clock"></i>10:00 hrs</p>
+                <p><i class="fas fa-calendar"></i>11 de Mayo</p>
+                <p><i class="fas fa-user"></i>Edgar Ortega</p>
+              </div><!--detalle curso-->
+              <a href="#" class="button float-right">Ver todos</a>
+            </div><!--seminarios-->
+
           </div><!--Programa evento-->
         </div><!--Contenedor-->
       </div><!--Contenido programa-->
@@ -152,10 +187,10 @@
     <div class="contador parallax">
       <div class="contenedor">
         <ul class="resumen-evento">
-          <li><p class="numero">6</p>Invitados</li>
-          <li><p class="numero">15</p>Talleres</li>
-          <li><p class="numero">3</p>Dias</li>
-          <li><p class="numero">9</p>Conferencias</li>
+          <li><p class="numero"></p>Invitados</li>
+          <li><p class="numero"></p>Talleres</li>
+          <li><p class="numero"></p>Dias</li>
+          <li><p class="numero"></p>Conferencias</li>
         </ul>
       </div>
     </div><!--parallax-->
@@ -204,7 +239,7 @@
         </ul>
       </div><!--contenedor-->
     </section><!--Precios-->
-    
+
     <div class="mapa"></div>
     <section class="seccion">
       <h2>Testimoniales</h2>
@@ -293,6 +328,8 @@
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
+  <script src="js/jquery.animateNumber.min.js"></script>
+  <script src="js/jquery.countdown.min.js"></script>
   <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
