--- a/index.html
+++ b/index.html
@@ -287,10 +287,10 @@
       <h2>faltan</h2>
       <div class="cuenta-regresiva contenedor">
         <ul class="clearfix">
-          <li><p class="numero">80</p>dias</li>
-          <li><p class="numero">15</p>Hora</li>
-          <li><p class="numero">5</p>Minutos</li>
-          <li><p class="numero">30</p>Segundos</li>
+          <li><p id="dias" class="numero"></p>dias</li>
+          <li><p id="horas" class="numero"></p>Horas</li>
+          <li><p id="minutos" class="numero"></p>Minutos</li>
+          <li><p id="segundos" class="numero"></p>Segundos</li>
         </ul>
       </div><!--cuenta regresiva-->
     </section><!--Seccion cuenta regresiva-->
@@ -330,6 +330,7 @@
   <script src="js/plugins.js"></script>
   <script src="js/jquery.animateNumber.min.js"></script>
   <script src="js/jquery.countdown.min.js"></script>
+  <script src="js/jquery.lettering.js"></script>
   <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
