--- a/404.html
+++ b/404.html
@@ -24,19 +24,24 @@
       display: table-cell;
       vertical-align: middle;
       margin: 2em auto;
+      background-color: rgb(61, 57, 57);
     }
 
     h1 {
-      color: #555;
+      color: #ffffff;
       font-size: 2em;
       font-weight: 400;
     }
 
     p {
+      color: #ffffff;
       margin: 0 auto;
       width: 280px;
     }
-
+    a{
+      text-decoration: none;
+      color: #fe4918;
+    }
     @media only screen and (max-width: 280px) {
 
       body,
@@ -54,8 +59,9 @@
 </head>
 
 <body>
-  <h1>Page Not Found</h1>
-  <p>Sorry, but the page you were trying to view does not exist.</p>
+  <h1>Página no encontrada</h1>
+  <img src="img/logo.svg" alt="Logo gdlWebCamp">
+  <p>Puedes volver al sitio haciendo click <a href="index.php">aquí</a></p>
 </body>
 
 </html>
